kubernetes/central-shop-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: central-shop-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: central-shop-app
  template:
    metadata:
      labels:
        app: central-shop-app
    spec:
      containers:
        - name: central-shop
          image: ukinolo/central-bike-shop:latest
          ports:
            - containerPort: 8080
        - name: central-shop-db
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: central-shop-db-storage
              mountPath: /var/lib/postgresql
      volumes:
        - name: central-shop-db-storage
          persistentVolumeClaim:
            claimName: central-shop-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: central-shop
spec:
  selector:
    app: central-shop-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
